# agent-profile-runtime

./: .gitignore  README.md  pyproject.toml
docs/: README.md
src/agent_profile_runtime/: __init__.py
src/agent_profile_runtime/mcp/: __init__.py  models.py
src/agent_profile_runtime/profiles/: __init__.py  base.py  factory.py  layouts.py  manager.py  meta.py
src/agent_profile_runtime/profiles/claude_code/: loader.py  profile.py  writer.py
src/agent_profile_runtime/profiles/codex/: blocks.py  loader.py  profile.py  writer.py
src/agent_profile_runtime/providers/: __init__.py  base.py  claude_code.py  codex.py  kinds.py  models.py  registry.py
src/agent_profile_runtime/runs/: __init__.py  artifacts.py  event_normalizer.py  executor.py  models.py  parser.py
src/agent_profile_runtime/runtime/: __init__.py  bootstrap.py  config.py  event_bus.py  service.py  subscriptions.py
src/agent_profile_runtime/sessions/: __init__.py  models.py  service.py  store.py
tests/unit/profiles/: test_profiles.py
tests/unit/providers/: test_provider_parsing.py  test_runtime_defaults.py
tests/unit/runs/: test_executor_and_artifacts.py
tests/unit/runtime/: test_event_streaming.py
